--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,8 @@
 
 # Ignore master key for decrypting credentials and more.
 /config/master.key
+/config/credentials.yml.enc
+/config/database.yml
 
 /public/packs
 /public/packs-test
